--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -37,7 +37,7 @@
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier \og Administrer les réseaux et
 l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
-usagers\fg{} (RT2)\\
+usagers\fg{} (RT2).\\
 Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
@@ -51,14 +51,14 @@ en téléphonie, ou en télécommunications numériques.}
 \item
   Comprendre la notion de signal numérique, et le principe de la
   numérisation et de la restitution de
-  signaux analogiques
+  signaux analogiques.
 \item
   Échantillonnage des signaux : choix d'une fréquence adéquate
   d'échantillonnage.
 \item
   Quantification des signaux -- Erreur de quantification.
 \item
-  Filtre Anti-repliement et filtre de restitution.
+  Filtre anti-repliement et filtre de restitution.
 \end{itemize}
 }
 
