--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -38,22 +38,21 @@
 \ajoutRprerequis{R109}{Introduction aux technologies Web}
 
 % Le descriptif
-\ajoutRancrage{Le professionnel R\&T traite un grand nombre de données (par ex:
+\ajoutRancrage{Le professionnel R\&T traite un grand nombre de données, comme
 l'annuaire des utilisateurs du réseau ou l'état des équipements
-informatiques). Elles peuvent servir à configurer ou à administrer les
-services réseau d'une entreprise (RT1) ou à alimenter les pages d'un
-site Web (RT3). Il est donc amené à stocker, organiser, gérer, protéger
-des données provenant de différentes sources (thématiques du
-\href{https://pix.fr/competences}{PIX}), mais aussi à les traiter en
+informatiques. Elles peuvent servir à gérer les services réseau d'une
+entreprise (RT1) ou à alimenter les pages d'un site Web (RT3). Il est
+donc amené à stocker, organiser, gérer, protéger des données provenant
+de différentes sources (thématiques du PIX,
+\url{https://pix.fr/competences}), mais aussi à les traiter en
 développant différents outils informatiques pour ses besoins personnels
 ou pour son équipe (RT3). Plus largement, il contribue activement à
 l'exploitation et à la maintenance du système d'information de
-l'entreprise.\\
-Cette ressource introduit les éléments fondamentaux des systèmes de
-gestion de base de données. Elle présente différentes alternatives
-technologiques pour le stockage et le codage de l'information, en
-fonction des données, de leur usage. L'accès aux données utilise des
-langages et des scripts spécifiques qui seront introduits.}
+l'entreprise. Cette ressource introduit les systèmes de gestion de base
+de données. Elle présente différentes alternatives technologiques pour
+le stockage et le codage de l'information en fonction des données et de
+leur usage. L'accès aux données utilise des langages et des outils
+spécifiques qui seront introduits.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -66,7 +65,7 @@ langages et des scripts spécifiques qui seront introduits.}
     Système de gestion de données (relationnel/non relationnel);
   \item
     Structuration des données: fichiers (\textabbrv{CSV}, \textabbrv{JSON}), exemples de sources
-    ouvertes (\emph{open data}), \emph{web scraping};
+    ouvertes (open data), web scraping;
   \item
     Sensibilisation à la réglementation française et internationale
     (\textabbrv{CNIL}, \textabbrv{RGPD}).
