--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -37,14 +37,15 @@
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T est amené à développer différents outils
-informatiques à usage personnel ou interne à l'équipe (RT3). Ces outils
-peuvent traiter des données complexes, viser des fonctionnalités
-multiples et être développé en équipe : il est alors nécessaire - pour
-le professionnel R\&T - de structurer son travail, tant sur les
-variables manipulant les données, les fichiers qui les sauvegardent ou
-les restaurent, que sur l'organisation (arborescence) de son projet. La
-ressource introduit ses éléments structurels en contribuant à
-l'acquisition des apprentissages critiques mentionnés précédemment.}
+informatiques à usage personnel ou interne à l'équipe (compétence
+RT3-Programmer). Ces outils peuvent traiter des données complexes, viser
+des fonctionnalités multiples et être développé en équipe : il est alors
+nécessaire - pour le professionnel R\&T - de structurer son travail,
+tant sur les variables manipulant les données, les fichiers qui les
+sauvegardent ou les restaurent, que sur l'organisation (arborescence) de
+son projet. La ressource introduit ses éléments structurels en
+contribuant à l'acquisition des apprentissages critiques mentionnés
+précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -54,7 +55,7 @@ l'acquisition des apprentissages critiques mentionnés précédemment.}
   Structure d'un programme : arborescence de fichiers, modules et
   packages.
 \item
-  Contexte d'exécution : programme principal \emph{vs} script.
+  Contexte d'exécution : programme principal vs script.
 \item
   Structure complexe de données :
   \begin{itemize}
@@ -86,4 +87,4 @@ L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Algorithmes, langages de programmation, structure de données, méthodologie de développement, gestion de versions.}
+\ajoutRmotscles{Algorithmes, Langages informatiques, Programmation, Structure de données, Méthodologie de développement, gestion de versions.}
