--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -53,14 +53,14 @@ de compréhension dans un contexte professionnel technique.}
   téléphonique, visioconférence,
   réunion, débat);
 \item
-  présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
+  Présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
   de motivation, entretien);
 \item
-  analyser des problèmes et proposer des solutions
+  Analyser des problèmes et proposer des solutions
 \item
-  faire un exposé technique;
+  Faire un exposé technique;
 \item
-  développer le vocabulaire technique des domaines cibles;
+  Développer le vocabulaire technique des domaines cibles;
 \item
   extensions possibles : télécollaboration, télétandem, parcours
   international, dispositif \textabbrv{EMILE}.
