--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -47,8 +47,10 @@ charte de bon usage des moyens informatiques.}
 % Livrable
 \ajoutSlivrables{
 Rapport d'analyse des risques numériques et présentation diaporama ou
-conception d'une courte vidéo de sensibilisation (style 180'\,') à
-destination des proches ou de la famille de l'étudiant.
+conception d'une courte vidéo de sensibilisation (\og en 180
+secondes\fg{}) destinée à vulgariser les premiers pas en cybersécurité.\\
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
