--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -12,63 +12,63 @@ environnement numérique.}
 On pourra faire un focus particulier sur les points suivants:
 \begin{itemize}
 \item
-  Protégez vos accès avec des mots de passe solides; en TP on peut
+  Protéger ses accès avec des mots de passe solides; en TP on peut
   mettre en place l'usage d'un gestionnaire
   de mot de passe tel que Keepass (multi-plateformes Windows, Linux,
   Mac, Android, iPhone/iPad);
 \item
-  Sécurité numérique : sauvegardez vos données régulièrement;
+  Sécurité numérique : sauvegarder ses données régulièrement;
 \item
-  Appliquez les mises à jour de sécurité sur tous vos appareils (\textabbrv{PC},
+  Appliquer les mises à jour de sécurité sur tous ses appareils (\textabbrv{PC},
   tablettes, téléphones\ldots), et ce,
-  dès qu'elles vous sont proposées;
+  dès qu'elles sont proposées;
 \item
-  Utilisez un antivirus;
+  Utiliser un antivirus;
 \item
-  Téléchargez vos applications uniquement sur les sites officiels;
+  Télécharger ses applications uniquement sur les sites officiels;
 \item
-  Sécurité numérique : méfiez-vous des messages inattendus;
+  Sécurité numérique : se méfier des messages inattendus;
 \item
-  Vérifiez les sites sur lesquels vous faites des achats;
+  Vérifier les sites sur lesquels sont effectués ses achats;
 \item
-  Maîtrisez vos réseaux sociaux;
+  Maîtriser ses réseaux sociaux;
 \item
-  Séparez vos usages personnels et professionnels;
+  Séparer ses usages personnels et professionnels;
 \item
-  Sécurité numérique : évitez les réseaux WiFi publics ou inconnus; il
+  Sécurité numérique : éviter les réseaux WiFi publics ou inconnus; il
   est possible de faire un TP (démo)
   sur l'usage d'un faux point d'accès WiFi et de collecter des
-  identifiants de réseaux sociaux, \ldots;
+  identifiants de réseaux sociaux, \ldots.
 \item
-  Analysez les trames non chiffrées des protocoles (\textabbrv{TELNET}, \textabbrv{FTP}, \textabbrv{SMTP},
-  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \ldots) avec Wireshark,
+  Analyser les trames non chiffrées des protocoles (telnet, ftp, smtp,
+  pop, imap, rtp, \ldots) avec Wireshark,
   en extraire des champs significatifs avec Analyse/Follow/\textabbrv{TCP} Stream
-  (ou \textabbrv{HTTP} Stream). On peut utiliser
+  (ou \textabbrv{HTTP} Stream); on peut utiliser
   un site Web (création personnelle ou sur Internet) contenant un
-  formulaire d'enregistrement
-  (ex: \url{http://www.supportduweb.com/signup.html});
+  formulaire d'enregistrement (ex:
+  \url{http://www.supportduweb.com/signup.html});
 \item
-  Utilisez des outils de codage de l'information (ex:
+  Utiliser des outils de codage de l'information (ex:
   \url{https://www.dcode.fr/fr}).
 \end{itemize}
-On pourra également utiliser les supports :
+On pourra également utiliser les supports:
 \begin{itemize}
 \item
-  Cybermalveillance:
+  Cybermalveillance :
   \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \textabbrv{MOOC} \textabbrv{ANSSI}: \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI} : \url{https://secnumacademie.gouv.fr/}
 \end{itemize}
 }
 
 \ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  TP, projet;
+  TP, projet.
 \item
   Appropriation du portfolio par l'étudiant, avec temps prévus pour
-  qu'il y synthétise sa production technique
-  et son analyse argumentée.
+  qu'il y synthétise sa production
+  technique et son analyse argumentée.
 \end{itemize}}
 
 
