--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -22,7 +22,7 @@ L'étudiant, dès la fin du S1, prendra ainsi conscience de la nécessité
 d'une bonne hygiène informatique, en découvrant :
 \begin{itemize}
 \item
-  l'intérêt des bons mots de passe (nombre de caractères, complexité de
+  l'intérêt des bons mots de passe (nb de caractères, complexité de
   l'alphabet);
 \item
   les sauvegardes de données (risque des supports, de la non
@@ -33,9 +33,9 @@ d'une bonne hygiène informatique, en découvrant :
   les types de logiciels malveillants (chevaux de troyes, bombes
   logiques, virus, vers, \ldots);
 \item
-  les sites web malveillants;
+  les sites Web malveillants;
 \item
-  les sites web mal écrits;
+  les sites Web mal écrits;
 \item
   les dépassement de tampon;
 \item
@@ -44,15 +44,14 @@ d'une bonne hygiène informatique, en découvrant :
   les écoutes de réseau.
 \end{itemize}
 Cette liste n'est évidemment pas limitative.\\
-On pourra également utiliser les supports :
+On pourra également utiliser les supports:
 \begin{itemize}
 \item
-  Cybermalveillance:
-  \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
+  Cybermalveillance:\url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \textabbrv{MOOC} \textabbrv{ANSSI}: \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI}:\url{https://secnumacademie.gouv.fr/}
 \item
-  Malette CyberEdu:
+  Malette CyberEdu :
   \url{https://www.ssi.gouv.fr/entreprise/formations/secnumedu/contenu-pedagogique-cyberedu/}
 \item
   et d'autres ressources aisément disponibles sur le Web.
@@ -62,11 +61,11 @@ On pourra également utiliser les supports :
 \ajoutESformes{\vspace{-5pt}
 \begin{itemize}
 \item
-  TP, projet;
+  TP, projet.
 \item
   Appropriation du portfolio par l'étudiant, avec temps prévus pour
-  qu'il y synthétise sa production technique
-  et son analyse argumentée.
+  qu'il y synthétise sa production
+  technique et son analyse argumentée.
 \end{itemize}}
 
 
