--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -60,7 +60,9 @@ stable.}
 \item
   Rapport technique avec présentation diaporama.
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseau local, Connexion internet, Équipements actifs.}
+\ajoutSmotscles{Réseau local, Connexion Internet, Équipements actifs.}
