--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -14,31 +14,31 @@ caractéristiques de consommation d'énergie des équipements du réseau.}
 \ajoutESdescription{
 Il s'agit de comprendre l'agencement des briques réseaux (accès au
 réseau Internet, Box en général), des équipements (routeur, switch,
-firewall, WiFi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
+firewall, wifi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
 jeux, media-center, \textabbrv{NAS}, \ldots) et des protocoles (\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}, Mail,
 Web, \ldots) qui permettent leur fonctionnement.\\
 On peut s'appuyer sur le réseau domestique de chaque étudiant avec une
 Box d'accès Internet (\textabbrv{xDSL}, \textabbrv{FO}), ou bien une maquette TP avec un routeur
 de sortie accédant à Internet via les ressources informatiques du
 département.On peut caractériser simplement l'adressage \textabbrv{IP}v4 dynamique,
-le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{DNS}.\\
+le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{DNS}.
 On peut également faire paramétrer un adressage \textabbrv{IP}v4 statique sur un
-poste client.On peut s'appuyer sur les commandes de base:
-\texttt{ipconfig}, \texttt{ifconfig}, \texttt{ip}, \texttt{ping},
-\texttt{arp}, \texttt{traceroute}, \texttt{arp-scan}
-(\emph{ArpCacheWatch} sous Windows) pour lister les adresses \textabbrv{MAC}
-présentes dans le réseau local.\\
+poste client.On peut s'appuyer sur les commandes de base: ipconfig,
+ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
+Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
-Publique :
-\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer}.\\
+Publique: \url{https://www.degrouptest.com/test-debit.php.}\\
+On peut faire découvrir l'application Android WiFi Analyser pour lister
+les points d'accès à proximité ou les fréquences utilisées :
+\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
-distribution Linux Kali en \textabbrv{VM} avec l'outil \texttt{nmap} pour découvrir
-(en interne) les ports ouverts sur les équipements du réseau local
+distribution Linux Kali en \textabbrv{VM} avec l'outil nmap pour découvrir (en
+interne) les ports ouverts sur les équipements du réseau local
 domestique. Bien expliquer que l'usage de cet outil de test de
 pénétration doit être réalisé en respectant l'éthique.
 }
 
-\ajoutESformes{}
+\ajoutESformes{TP, projet}
 
 
 
@@ -48,7 +48,8 @@ relevées. Il doit être capable de produire une fiche technique de
 recette ou une présentation type powerpoint. Un bilan de consommation
 énergétique des équipements du réseau doit être également fourni, il
 peut être complété par les informations provenant d'un compteur
-électrique intelligent.On peut utiliser un logiciel de dessin technique
-(type \url{https://app.diagrams.net}, Microsoft Visio ou Lucidchart)
-pour les schémas réseaux en utilisant à bon escient les symboles et
-pictogrammes (switch, routeur, firewall, WiFi, \ldots).}
+électrique intelligent.\\
+On peut utiliser un logiciel de dessin technique (type
+\url{https://app.diagrams.net,} Microsoft Visio ou Lucidchart) pour les
+schémas réseaux en utilisant à bon escient les symboles et pictogrammes
+(switch, routeur, firewall, WiFi, \ldots).}
