--- a/latex/saes/SAE12_exemple3.tex
+++ b/latex/saes/SAE12_exemple3.tex
@@ -6,41 +6,42 @@
 
 \ajoutESproblematique{Le but est d'amener les étudiants à construire eux-mêmes un réseau
 simplifié d'équipements actifs filaires interconnectés, sur la base d'un
-cahier des charges général type ``schéma de dépannage''.}
+cahier des charges général type \og  schéma de dépannage \fg{}.}
 
 \ajoutESdescription{
-La SAÉ nécessite un travail en amont de recensement des fonctionnalités
-nécessaires et d'un recensement de matériel choisi sur la base d'un
-recueil de fiches produit professionnelles (\emph{datasheet} en anglais)
-ou à défaut une sitographie commerçante anglophone.\\
+Cette SAÉ nécessite un travail en amont de recensement des
+fonctionnalités nécessaires et d'un recensement de matériel choisi sur
+la base d'un recueil de fiches produit professionnelles (\og  datasheet
+\fg{} en anglais) ou à défaut une sitographie commerçante anglophone.\\
 Suite à ce choix, les étudiants produisent eux-mêmes au moins un des
 câbles nécessaires à cette installation. Ils utiliseront les équipements
 déjà en place dans l'établissement en remplacement de ceux qui auront
-été déterminés pour achat sur catalogue. La SAE se termine par le
+été déterminés pour achat sur catalogue. La SAÉ se termine par le
 déploiement et la configuration des équipements et des postes clients et
 d'en permettre leur administration dans l'avenir.\\
-Une fois le réseau fonctionnel, définition d'un poste comme point
-d'administration. Ce poste dispose d'un accès à une interface de
+Une fois le réseau fonctionnel, il convient de définir un poste comme
+point d'administration. Ce poste dispose d'un accès à une interface de
 commande (console et ssh sur routeur et switch) et d'une interface
-capturant le trafic sur lien inter-\textabbrv{VLAN}. Possibilité d'analyser les flux
-sur grâce aux outils de capture des trames (Tcpdump, Wireshark).\\
+capturant le trafic sur lien inter-\textabbrv{VLAN}. Il est également possible
+d'analyser les flux sur grâce aux outils de capture des trames (Tcpdump,
+Wireshark).\\
 En synthèse, l'étudiant sera confronté à :
 \begin{itemize}
 \item
-  Analyse des besoins et chiffrage des achats nécessaires.
+  Analyse des besoins et chiffrage des achats nécessaires ;
 \item
-  Construction (sertissage) des câbles et recettes de conformité.
+  Construction (sertissage) des câbles et recettes de conformité ;
 \item
-  Déploiement et configuration d'un \textabbrv{LAN} multi-réseaux, multi-\textabbrv{VLAN}.
+  Déploiement et configuration d'un \textabbrv{LAN} multi-réseaux, multi-\textabbrv{VLAN} ;
 \item
-  Déploiement des postes clients communicants.
+  Déploiement des postes clients communicants ;
 \item
   Mise en place d'une solution d'administration et de surveillance des
-  flux
+  flux.
 \end{itemize}
 }
 
-\ajoutESformes{}
+\ajoutESformes{TP, projet}
 
 
 
@@ -50,17 +51,17 @@ En synthèse, l'étudiant sera confronté à :
   Livrable documentaire en tant qu'évaluation intermédiaire :
   \begin{itemize}
   \item
-    Recensement des besoins de fonctionnalités;
+    recensement des besoins de fonctionnalités;
   \item
-    Prévisionnel des achats nécessaires (hors poste client).
+    prévisionnel des achats nécessaires (hors poste client).
   \end{itemize}
 \item
   Livrables de réalisation pratique en tant qu'évaluation terminale :
   \begin{itemize}
   \item
-    Validation en TP des configurations déployées sur les équipements :
-    l'étudiant doit être en
-    capacité de commenter ses choix et réalisations;
+    validation en TP des configurations déployées sur les équipements :
+    l'étudiant doit être en capacité
+    de commenter ses choix et réalisations;
   \item
     ou soutenance justifiant les choix et présentant l'architecture mise
     en place.
