--- a/latex/saes/SAE12_exemple4.tex
+++ b/latex/saes/SAE12_exemple4.tex
@@ -18,7 +18,7 @@ réseaux.\\
 Les étapes à réaliser seraient les suivantes :
 \begin{itemize}
 \item
-  Connecter un Raspberry PI avec un clavier un écran et récupérer son
+  Connecter un Raspberry PI avec un clavier, un écran et récupérer son
   adresse \textabbrv{MAC}.
 \item
   Changer le login et le mot de passe par défaut.
@@ -28,7 +28,7 @@ Les étapes à réaliser seraient les suivantes :
 \item
   Débrancher le Raspberry PI et le brancher sur un autre réseau
   ailleurs. Puis utiliser les commandes
-  \textabbrv{SSH} pour retrouver l'adresse de la carte sur le nouveau réseau et
+  ssh pour retrouver l'adresse de la carte sur le nouveau réseau et
   communiquer avec elle.
 \item
   Utiliser via \textabbrv{SSH} le Raspberry PI pour allumer la \textabbrv{LED} qui est connectée
@@ -38,14 +38,14 @@ Les étapes à réaliser seraient les suivantes :
 \end{itemize}
 }
 
-\ajoutESformes{}
+\ajoutESformes{TP, projet}
 
 
 
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Compte-rendu;
+  Compte-rendu
 \item
   et/ou vidéo de démonstration.
 \end{itemize}}
