--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -58,7 +58,9 @@ L'évaluation s'appuiera sur tout ou partie des éléments suivants :
 \item
   présentation orale des mesures réalisées.
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Mesures, Supports de transmission (fibre optique, cuivre, radio).}
+\ajoutSmotscles{Mesures, Supports de transmission, Fibre optique, Cuivre, Radio.}
