--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -2,17 +2,27 @@
 % Exemple de SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelexemple{Caractériser un support cuivre}
+\nouvelexemple{Caractériser des supports de transmission}
 
-\ajoutESproblematique{L'entreprise demande à l'étudiant de savoir lire un document technique
-(atténuation, bande passante, catégorie ou norme) et/ou analyser un
-schéma de câblage cuivre, de caractériser par des mesures le support
-cuivre (retard de propagation, atténuation, continuité, échos, bruit,
-perturbations, identifier un défaut) voire de certifier un câblage \textabbrv{LAN}
-cuivre afin de comprendre les principaux critères de choix d'un support
-et/ou de savoir présenter des résultats à un client ou un collaborateur.\\
+\ajoutESproblematique{L'entreprise demande à l'étudiant de :
+\begin{itemize}
+\item
+  savoir lire un document technique de mesures;
+\item
+  analyser un schéma/une structure de câblage;
+\item
+  de caractériser un support de transmission par différentes mesures
+  (retard de propagation, atténuation,
+  continuité, échos, bruit, perturbations, \ldots) en vu d'identifier un
+  défaut;
+\item
+  voire de certifier un câblage \textabbrv{LAN} cuivre de comprendre les principaux
+  critères de choix d'un support
+  et/ou de savoir présenter des résultats à un client ou un
+  collaborateur.
+\end{itemize}
 L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
-pour identifier et caractériser un support cuivre et savoir rédiger un
+pour identifier et caractériser un support et savoir rédiger un
 compte-rendu de mesure.}
 
 \ajoutESdescription{
@@ -21,6 +31,21 @@ fondamentaux de l'étude des supports de transmissions dans les réseaux,
 les concepts fondamentaux des systèmes électroniques, le vocabulaire en
 architecture des réseaux numériques, des concepts mathématiques pour les
 signaux de base, pour les calculs de puissance, d'atténuation.\\
+Le support pourra être :
+\begin{itemize}
+\item
+  le cuivre, avec pour mesures envisagées : des mesures temporelles
+  (échelon, sinus), le retard de propagation,
+  l'atténuation, les échos (réflexion), les perturbations, supposant
+  l'utilisation de \textabbrv{GBF}, d'oscilloscope
+  et de câbles;
+\item
+  la fibre optique, avec pour outils envisagés : la soudure, le crayon
+  optique, la sonde d'inspection,la photométrie,
+\item
+  une liaison radio, les mesures traitant de l'atténuation ou des effets
+  d'interférences
+\end{itemize}
 L'étudiant devra :
 \begin{itemize}
 \item
@@ -40,7 +65,7 @@ Exemples de mise en oeuvre :
 \begin{itemize}
 \item
   Mesure temporelle (échelon, sinus), retard de propagation,
-  atténuation,échos (réflexion), perturbations,
+  atténuation, échos (réflexion), perturbations,
   (\textabbrv{GBF}, oscillo, câble);
 \item
   Vérifier la conformité par rapport à un cahier des charges, une norme,
@@ -49,7 +74,7 @@ Exemples de mise en oeuvre :
   support, mesure de longueur,
   d'atténuation, \ldots{}
 \item
-  Vérification de la conformité des mesures
+  Vérifier la conformité des mesures;
 \item
   Diagnostiquer des anomalies et proposer une reprise du câblage, un
   changement du support.
