--- a/latex/saes/SAE13_exemple2.tex
+++ b/latex/saes/SAE13_exemple2.tex
@@ -4,7 +4,13 @@
 
 \nouvelexemple{Caractériser un support fibre optique}
 
-\ajoutESproblematique{L'entreprise demande à l'étudiant de savoir lire un document technique
+\ajoutESproblematique{L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
+pour identifier et caractériser un support fibre optique et savoir
+rédiger un compte-rendu de mesure.}
+
+\ajoutESdescription{
+Contexte professionnel :\\
+L'entreprise demande à l'étudiant de savoir lire un document technique
 de mesure et/ou de mettre en place une liaison optique et/ou d'analyser
 la structure d'une liaison optique, de caractériser par des mesures le
 support fibre optique (crayon optique, sonde d'inspection, photométrie,
@@ -12,16 +18,16 @@ identifier un défaut, \ldots) voire de certifier un câblage \textabbrv{LAN} fi
 optique. L'étudiant pourra ainsi comprendre les principaux critères de
 choix d'un support et/ou de savoir présenter des résultats à un client
 ou un collaborateur.\\
-L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
-pour identifier et caractériser un support fibre optique et savoir
-rédiger un compte-rendu de mesure.}
-
-\ajoutESdescription{
 L'étudiant devra s'appuyer sur ses connaissances, notamment les concepts
 fondamentaux de l'étude des supports de transmissions dans les réseaux,
 les concepts fondamentaux des systèmes électroniques, le vocabulaire en
 architecture des réseaux numériques, des concepts mathématiques pour les
-signaux de base, pour les calculs de puissance, d'atténuation.\\
+signaux de base, pour les calculs de puissance, d'atténuation.
+}
+
+\ajoutESformes{Mini-projet en binôme associant un TP long, encadré par un enseignant et
+des heures non encadrées pour, par exemple, la préparation du TP puis
+pour la rédaction du compte rendu.\\
 L'étudiant devra :
 \begin{itemize}
 \item
@@ -36,23 +42,19 @@ L'étudiant devra :
   réaliser des mesures;
 \item
   analyser et exploiter des résultats de tests.
-\end{itemize}
-}
-
-\ajoutESformes{Mini-projet en binôme associant un TP long, encadré par un enseignant et
-des heures non encadrées pour, par exemple, la préparation du TP puis
-pour la rédaction du compte rendu.}
+\end{itemize}}
 
 
 
 \ajoutESmodalite{L'étudiant doit être capable de rédiger un compte-rendu de mesure avec
 explications.\\
+Modalités :\\
 On pourra s'appuyer sur:
 \begin{itemize}
 \item
   dossier ou rapport d'étude (compte-rendu);
 \item
-  rapport de mesures;
+  rapport de mesures ;
 \item
   \textabbrv{QCM} sur les mesures;
 \item
