--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -60,6 +60,8 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 \item
   Grille de suivi
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
