--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -114,17 +114,16 @@ différentes étapes :
 \begin{itemize}
 \item
   Codes informatiques développés : l'étudiant devra fournir l'ensemble
-  de scripts et de codes
-  informatiques, permettant la réalisation fonctionnelle du travail
-  demandé. Sa production devra
-  être documentée, dans le code et dans un compte rendu des étapes
-  d'installation et de configuration
-  qu'il aura réalisé.
+  de scripts et de codes informatiques,
+  permettant la réalisation fonctionnelle du travail demandé. Sa
+  production devra être documentée, dans
+  le code et dans un compte rendu des étapes d'installation et de
+  configuration qu'il aura réalisé.
 \item
   Démonstration de l'installation, de l'accès, de la validité et de la
   cohérence des données présentées.
   Il devra également y expliquer sa démarche, ses choix
-  d'implémentation, les analyses et outils
-  mathématiques et scientifiques utilisés pour présenter les données et
-  interpréter les résultats obtenus.
+  d'implémentation, les analyses et outils mathématiques
+  et scientifiques utilisés pour présenter les données et interpréter
+  les résultats obtenus.
 \end{itemize}}
