--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -4,7 +4,7 @@
 
 \nouvellesae{SAÉ16}{Portfolio}
 
-\ajoutSheures{3}{3}{0}
+\ajoutSheures{3}{3}{???}
 
 
 %% Les compétences et les ACs
@@ -12,33 +12,19 @@
 
 \ajoutScoeff{0}
 
-\ajoutSac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
-\ajoutSac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
-\ajoutSac{AC0113}{Configurer les fonctions de base du réseau local}
-\ajoutSac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
-\ajoutSac{AC0115}{Identifier les dysfonctionnements du réseau local}
-\ajoutSac{AC0116}{Installer un poste client}
+
 
 \ajoutScompetence{RT2-Connecter}{\niveauA}
 
 \ajoutScoeff{0}
 
-\ajoutSac{AC0211}{Mesurer et analyser les signaux}
-\ajoutSac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
-\ajoutSac{AC0213}{Déployer des supports de transmission}
-\ajoutSac{AC0214}{Connecter les systèmes de \textabbrv{ToIP}}
-\ajoutSac{AC0215}{Communiquer avec un client ou un collaborateur}
+
 
 \ajoutScompetence{RT3-Programmer}{\niveauA}
 
 \ajoutScoeff{0}
 
-\ajoutSac{AC0311}{Utiliser un système informatique et ses outils}
-\ajoutSac{AC0312}{Lire, exécuter, corriger et modifier un programme}
-\ajoutSac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
-\ajoutSac{AC0314}{Connaître l'architecture et les technologies d'un site Web}
-\ajoutSac{AC0315}{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}
-\ajoutSac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
+
 
 % Le description
 \ajoutSdescription{Au sein d'un dossier et quels qu'en soient la forme, l'outil ou le
@@ -48,25 +34,27 @@ réflexive et critique vis-à-vis des compétences acquises ou en voie
 d'acquisition. Autrement dit, au sein du portfolio, l'apprenant
 documente et analyse sa trajectoire de développement en mobilisant des
 traces, des preuves issues de l'ensemble des mises en situation
-professionnelle (SAÉ) qu'il a vécues.\\
+professionnelle (SAÉ) qu'il a vécues. Il pourra s'appuyer sur les outils
+portfolio mis en place par l'établissement: carnet papier, document
+bureautique ou logiciel dédié.\\
 Le portfolio est un élément structurant des formations en Approche Par
 Compétence (\textabbrv{APC}). En effet, le portfolio :
 \begin{itemize}
 \item
   soutient l'apprentissage par la constitution d'un dossier de traces
   (échantillon de preuves, sélectionnées
-  par l'étudiant dans le but de de rendre compte d'apprentissages
-  aboutissant à la maîtrise progressive
-  d'un domaine de compétences);
+  par l'étudiant dans le but de rendre compte d'apprentissages
+  aboutissant à la maîtrise progressive d'un
+  domaine de compétences);
 \item
   permet la validation et la certification de savoir-agir complexes tout
   au long du parcours de formation;
 \item
   favorise l'auto-détermination du parcours de formation de l'étudiant
-  et qu'il accompagne son parcours
-  d'insertion professionnelle (permet également de cultiver son identité
-  numérique à savoir la présentation
-  et le choix de rendre public des documents sur soi.
+  et accompagne son parcours d'insertion
+  professionnelle (permet également de cultiver son identité numérique à
+  savoir la présentation et le
+  choix de rendre public des documents sur soi).
 \end{itemize}
 En outre, en tant qu'il suppose un engagement de la part de l'apprenant
 lui-même, le portfolio soutient le développement des compétences et
@@ -76,8 +64,6 @@ continu porté par chaque apprenant au cours duquel il prend pleinement
 conscience de ce qu'il a ou non acquis, et des ajustements nécessaires à
 opérer au regard du référentiel de compétences et des objectifs de la
 formation.\\
-La SAÉ s'appuiera sur les outils portfolio mis en place par
-l'établissement: carnet papier, document bureautique ou logiciel dédié.\\
 Consistant en une analyse réflexive des mises en situation
 professionnelle vécues (SAÉ), le portfolio nécessite la mobilisation et
 la combinaison de ressources telles que l'expression et la
@@ -88,9 +74,7 @@ Aussi, parallèlement à ses objectifs traditionnels issus de l'expérience
 acquise dans le cadre du DUT, le \textabbrv{PPP} devra, tel un fil conducteur,
 permettre à l'étudiant d'être guidé dans la compréhension et
 l'appropriation de son cursus de formation, ainsi que dans la
-méthodologie d'écriture du portfolio.\\
-L'étudiant consacrera du temps dans chaque SAÉ à la mise à jour de son
-portfolio.}
+méthodologie d'écriture du portfolio.}
 
 % Les ressources
 \ajoutSressources{R111}{Expression-Culture-Communication Professionnelles 1}
@@ -98,9 +82,9 @@ portfolio.}
 
 % Livrable
 \ajoutSlivrables{
-Portfolio : \emph{ensembles de traces et de preuves de l'acquisition des
-compétences}.
+Portfolio : ensembles de traces et de preuves de l'acquisition des
+compétences.
 }
 
 % Mots-clés
-\ajoutSmotscles{Portfolio, Compétences.}
+\ajoutSmotscles{Portfolio Compétences.}
