--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -55,7 +55,7 @@ fournir à la structure un réseau fonctionnel et structuré.}
 \item
   Maquette du projet
 \item
-  Dossier ou rapport décrivant l'architecture physique, les \textabbrv{VLAN},
+  Dossier ou rapport décrivant l'architecture physique, les vlan,
   l'adressage \textabbrv{IP}, les principaux points
   de vérification du projet, des captures de trafic et différents
   scénarios permettant de valider les
