--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -30,7 +30,7 @@
 
 
 % Le description
-\ajoutSdescription{Dans cette SAÉ, l'étudiant saura mobiliser les compétences pour analyser
+\ajoutSdescription{Dans cette SAE, l'étudiant saura mobiliser les compétences pour analyser
 des signaux d'un système de transmission, les exploiter, et les
 présenter sous forme d'un bilan à un client ou un collaborateur.}
 
@@ -50,9 +50,9 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
 \item
   Rapport écrit;
 \item
-  Présentation orale des performances mesurées.
+  présentation orale des performances mesurées.
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutSmotscles{Spectre, Puissance, Décibels, Sensibilité, Atténuation, Gain.}
+\ajoutSmotscles{Spectre, puissance, décibels, sensibilité, atténuation, gain.}
