--- a/latex/saes/SAE22_exemple1.tex
+++ b/latex/saes/SAE22_exemple1.tex
@@ -4,15 +4,16 @@
 
 \nouvelexemple{Analyse de lignes \textabbrv{ADSL}}
 
-\ajoutESproblematique{Les lignes \textabbrv{ADSL} peuvent être perturbées par des signaux parasites créés
+\ajoutESproblematique{}
+
+\ajoutESdescription{
+Les lignes \textabbrv{ADSL} peuvent être perturbées par des signaux parasites créés
 par exemple par une alimentation défectueuse ou un moteur d'ascenseur
 avec des problèmes de \textabbrv{CEM}. Ces perturbateurs peuvent entraîner une
 déconnexion totale d'une ligne \textabbrv{ADSL} voir de toutes les lignes d'un
 immeuble. L'analyse spectrale et la recherche de ces perturbateurs est
-donc une fonction du maintien en condition opérationnelle de ces lignes.}
-
-\ajoutESdescription{
-La SAÉ porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
+donc une fonction du maintien en condition opérationnelle de ces lignes.\\
+La SAE porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
 pourra comporter jusqu'à 5 parties :
 \begin{itemize}
 \item
@@ -20,7 +21,10 @@ pourra comporter jusqu'à 5 parties :
   le signal sous forme d'un fichier
   Excel (une colonne pour le temps et une pour l'amplitude, soit 2
   vecteurs) et l'étudiant devra afficher
-  la \textabbrv{FFT}.
+  la \textabbrv{FFT}. Une ressource sur une librairie pour calculer la \textabbrv{FFT} d'un
+  signal (par exemple numpy en Python)
+  et sur l'affichage d'une courbe (par exemple matplotlib en Python) est
+  donc nécessaire.
 \item
   Détermination de la largeur de la bande montante et descendante
   (changement de valeur de la \textabbrv{DSP}).
@@ -37,14 +41,13 @@ pourra comporter jusqu'à 5 parties :
   fréquence de ce perturbateur dans le
   spectre.
 \end{itemize}
-Le travail pourra s'appuyer sur une librairie pour calculer la \textabbrv{FFT} (par
-ex : \texttt{numpy} en Python) et une autre pour l'affichage d'une
-courbe (par ex : \texttt{matplotlib} en Python).
+Elle pourra s'appuyer sur une librairie pour la \textabbrv{FFT} (par exemple numpy
+en Python) et une autre pour l'affichage d'une courbe (par exemple
+matplotlib en Python)
 }
 
 \ajoutESformes{Travaux pratiques et projet semi-autonome.}
 
 
 
-\ajoutESmodalite{Présentation des résultats dans un \emph{notebook} Python, avec
-explications claires prouvant la compréhension.}
+\ajoutESmodalite{}
