--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -66,7 +66,7 @@ informatique pour le compte de son entreprise.}
   Codes informatiques du site Web fonctionnel et dynamique
 \item
   Documentation technique, informative présentant la méthode de
-  validation (par ex : cahier de tests,
+  validation (exemple : cahier de tests,
   tests unitaires)
 \item
   Tutoriel d'installation et d'utilisation
