--- a/latex/saes/SAE23_exemple2.tex
+++ b/latex/saes/SAE23_exemple2.tex
@@ -15,16 +15,17 @@ développement - documenter les fonctionnalités de son outil et former
 les utilisateurs à son utilisation.}
 
 \ajoutESdescription{
-Cette SAÉ propose à l'étudiant de s'initier au développement d'une telle
+Cette SAé propose à l'étudiant de s'initier au développement d'une telle
 application Web. Partant des besoins utilisateurs, l'étudiant devra :
 \begin{itemize}
 \item
-  mettre en place de son environnement de travail;
+  mettre en place de son environnement de travail (ressource R108)
 \item
   choisir et utiliser les technologies Web adéquates pour produire son
-  site Web,
-  mettre en place la gestion des données du site et programmer leur
-  traitement;
+  site Web (ressource R109 et R209),
+  mettre en place la gestion des données du site (ressource R207) et
+  programmer leur traitement (ressource
+  R107 et R208)
 \item
   présenter le travail réalisé aux utilisateurs pour les former à son
   utilisation, certains utilisateurs
@@ -32,20 +33,20 @@ application Web. Partant des besoins utilisateurs, l'étudiant devra :
 \end{itemize}
 La SAÉ pourra être réalisée par un groupe de 2 étudiants.\\
 Partant d'un cahier des charges fourni, et pour un binôme d'étudiants,
-la SAÉ pourra être mise en oeuvre avec différentes étapes :
+la SAé pourra être mise en oeuvre avec différentes étapes :
 \begin{itemize}
 \item
   Phase 1 : mise en place de l'environnement de développement
   \begin{itemize}
   \item
     Utilisation d'une machine virtuelle ou accès à distance aux
-    ressources (par ex : ferme ESX,
-    Proxmox, Guacamole, Docker, \ldots), partage par clés \textabbrv{USB}
+    ressources (par exemple : ferme ESX,
+    proxmox, guacamole, docker, \ldots), partage par clés \textabbrv{USB}
   \item
     Installation ou utilisation d'un serveur web non chiffré (type Nginx
     ou Apache)
   \item
-    Utilisation possible d'un \emph{framework} python (Django, Flask) ou
+    Utilisation possible d'un framework python (Django, Flask) ou
     JavaScript (jQuery), Java (play), etc\ldots{}
   \end{itemize}
 \item
@@ -54,7 +55,7 @@ la SAÉ pourra être mise en oeuvre avec différentes étapes :
   \item
     Algorithmique (script serveur, dépôt de codes)
   \item
-    Technologie Web (\textabbrv{HTML}, \textabbrv{CSS})
+    Technologie Web (\textabbrv{HTML}, css)
   \item
     Base de données avec manipulation de données (ajout, suppression,
     modification)
@@ -66,7 +67,7 @@ la SAÉ pourra être mise en oeuvre avec différentes étapes :
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{}
 
 
 
