--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -4,12 +4,12 @@
 
 \nouvelexemple{Découvrir mon réseau informatique domestique}
 
-\ajoutESproblematique{Le réseau informatique domestique est une « petite » instance d'un
-réseau d'entreprise (par exemple, box, points d'accès wifi, réseaux du
-CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
+\ajoutESproblematique{Le réseau informatique domestique est une \og  petite \fg{} instance
+d'un réseau d'entreprise (par exemple, box, points d'accès wifi, réseaux
+du CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
 Dans cette SAÉ, l'étudiant devra comprendre l'agencement des briques
 télécoms (accès au réseau), des équipements (routeur, switch, firewall,
-WiFi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
+wifi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
 \textabbrv{DHCP}, \textabbrv{DNS}, Mail, Web, \ldots) qui permettent le fonctionnement de son
 réseau domestique.\\
 Il devra également reconnaître les \textabbrv{OS} des différents appareils connectés
