--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -31,27 +31,27 @@
 
 
 % Le descriptif
-\ajoutRancrage{Le Projet Personnel et Professionnel des semestres 1 et 2 de la première
-année de B.U.T. permet à l'étudiant :
+\ajoutRancrage{Le Projet Personnel et Professionnel (\textabbrv{PPP}) des semestres 1 et 2 de la
+première année de B.U.T. permet à l'étudiant :
 \begin{itemize}
 \item
-  s'approprier son champ d'activité ;
+  s'approprier son champ d'activité;
 \item
   se constituer un panorama des métiers dans le domaine des réseaux et
-  télécommunications ;
+  télécommunications;
 \item
   se constituer un panorama des entreprises dans le secteur des réseaux
-  et télécommunications ;
+  et télécommunications;
 \item
   amener les étudiants à se projeter en tant que professionnels en
   mobilisant les techniques de recrutement
-  dans le cadre d'une recherche de stage ou d'un contrat d'alternance ;
+  dans le cadre d'une recherche de stage ou d'un contrat d'alternance;
 \item
-  découvrir le portfolio et son utilisation dans la formation ;
+  découvrir le portfolio et son utilisation dans la formation;
 \item
   de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
   les ressources au programme de
-  chaque semestre ;
+  chaque semestre;
 \item
   d'avoir une compréhension exhaustive du référentiel de compétences de
   la formation et des éléments
@@ -65,15 +65,15 @@ Les activités pouvant être proposées dans cette ressource sont :
 \begin{itemize}
 \item
   rencontres d'entrepreneurs, de chefs de service, de techniciens et
-  d'enseignants ;
+  d'enseignants;
 \item
   visites d'entreprises, forums;
 \item
-  témoignages, relations avec d'anciens diplômés ;
+  témoignages, relations avec d'anciens diplômés;
 \item
-  découverte et compréhension d'un bassin d'emploi particulier ;
+  découverte et compréhension d'un bassin d'emploi particulier;
 \item
-  intérêt et prise en main d'un portfolio ;
+  intérêt et prise en main d'un portfolio;
 \item
   déterminer ses atouts personnels.
 \end{itemize}
