--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -47,7 +47,7 @@ télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Introduction aux signaux
+  Introduction aux signaux :
   \begin{itemize}
   \item
     graphe d'un signal;
@@ -71,7 +71,7 @@ Cette partie sera l'occasion de réviser les règles de calculs de base
 par l'intermédiaire du calcul d'images et d'antécédents.
 \begin{itemize}
 \item
-  Éléments de trigonométrie
+  Éléments de trigonométrie :
   \begin{itemize}
   \item
     définition du radian;
@@ -87,7 +87,7 @@ et les mêmes avec sinus;
 \item
   angles remarquables.
 \item
-  Signaux périodiques
+  Signaux périodiques :
   \begin{itemize}
   \item
     période, fréquence, pulsation;
