--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -38,32 +38,32 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1). Elle donne aux étudiants les compétences pour
+les compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1). Elle donne aux étudiants les compétences pour
 effectuer des tâches simples d'administration du système d'information
 de l'entreprise (processus, utilisateurs, automatisation) et pour
 utiliser des solutions de virtualisation, de conteneurisation.\\
-Elle contribue aussi à la compétence ``Créer des outils et applications
-informatiques pour les R\&T'' (RT3) à travers la découverte du poste
-client et de son environnement logiciel.}
+Elle contribue aussi à la compétence \og Créer des outils et
+applications informatiques pour les R\&T\fg{} (RT3) à travers la
+découverte du poste client et de son environnement logiciel.}
 
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Gestion des systèmes de fichiers (volumes, droits, types de fichiers).
+  Gestion des systèmes de fichiers (volumes, droits, types de fichiers)
 \item
-  Gestion de processus et services.
+  Gestion de processus et services
 \item
-  Gestion de ressources utilisateurs (comptes, quotas).
+  Gestion de ressources utilisateurs (comptes, quotas)
 \item
-  Scripts pour l'automatisation de séquences de commandes.
+  Scripts pour l'automatisation de séquences de commandes
 \item
-  Utilisation de fichiers de traces (logs).
+  Utilisation de fichiers de traces (logs)
 \item
   Initiation et mise en oeuvre d'infrastructures de virtualisation et/ou
-  de conteneurisation.
+  de conteneurisation
 \end{itemize}
 }
 
