--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -31,36 +31,52 @@
 \ajoutRprerequis{R112}{Projet Personnel et Professionnel}
 
 % Le descriptif
-\ajoutRancrage{Cette ressource permettra à l'étudiant de :\\
--- d'avoir une compréhension exhaustive du référentiel de compétences de
-la formation et des éléments le structurant\\
--- de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
-les ressources au programme de chaque semestre ;\\
--- de se positionner sur un des parcours de la spécialité lorsque ces
-parcours sont proposés en seconde année ;\\
--- de mobiliser les techniques de recrutement dans le cadre d'une
-recherche de stage ou d'un contrat d'alternance\\
--- se caractériser pour préparer son stage ou son alternance\\
--- se présenter, se définir;\\
--- exprimer l'intérêt professionnel, valeurs, motivations, traits de
-personnalité, expériences professionnelles ou personnelles;\\
--- mettre en valeur et présenter son savoir-être;\\
--- identifier ses compétences;\\
--- préciser et exprimer ses souhaits professionnels.}
+\ajoutRancrage{Cette ressource permettra à l'étudiant de :
+\begin{itemize}
+\item
+  d'avoir une compréhension exhaustive du référentiel de compétences de
+  la formation et des éléments
+  le structurant
+\item
+  de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
+  les ressources au programme de
+  chaque semestre ;
+\item
+  de se positionner sur un des parcours de la spécialité lorsque ces
+  parcours sont proposés en seconde
+  année ;
+\item
+  de mobiliser les techniques de recrutement dans le cadre d'une
+  recherche de stage ou d'un contrat
+  d'alternance
+\item
+  se caractériser pour préparer son stage ou son alternance
+\item
+  se présenter, se définir;
+\item
+  exprimer l'intérêt professionnel, valeurs, motivations, traits de
+  personnalité, expériences professionnelles
+  ou personnelles;
+\item
+  mettre en valeur et présenter son savoir-être;
+\item
+  identifier ses compétences;
+\item
+  préciser et exprimer ses souhaits professionnels.
+\end{itemize}}
 
 % Contenus
 \ajoutRcontenudetaille{
-Activités notamment proposées dans cette ressource :
+Les activités notamment proposées dans cette ressource sont :
 \begin{itemize}
 \item
-  enquête métiers et veille professionnelle ;
+  enquête métiers et veille professionnelle;
 \item
-  rencontres et entretiens avec des professionnels et anciens étudiants
-  ;
+  rencontres et entretiens avec des professionnels et anciens étudiants;
 \item
-  visite d'entreprise ou d'organisation ;
+  visite d'entreprise ou d'organisation;
 \item
-  participation à des conférences métiers ;
+  participation à des conférences métiers;
 \item
   construction d'une identité professionnelle numérique;
 \item
