--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -11,23 +11,38 @@ configurer le plan d'adressage (statique/\textabbrv{DHCP}) et le routage,
 installation des postes clients (Windows, Linux) pour les utilisateurs.}
 
 \ajoutESdescription{
-Il s'agit de répondre au cahier des charges, savoir dimensionner les
-puissances électriques de l'installation réseau et télécom, savoir
-dimensionner les équipements du réseau, assurer l'interconnexion d'une
-installation temporaire, garantir la sécurité des ports des switchs,
-utiliser des \textabbrv{VLAN} distincts (\emph{data}, \emph{management}), mettre en
-place une politique sécurisée de mots de passe (utilisateurs,
-équipements), savoir monitorer les éléments actifs et observer le trafic
-sur réseau, savoir diagnostiquer les dysfonctionnements.
+Il s'agit de :
+\begin{itemize}
+\item
+  répondre au cahier des charges;
+\item
+  savoir dimensionner les puissances électriques de l'installation
+  réseau et télécom;
+\item
+  savoir dimensionner les équipements du réseau;
+\item
+  assurer l'interconnexion d'une installation temporaire;
+\item
+  garantir la sécurité des ports des switchs;
+\item
+  utiliser des \textabbrv{VLAN}s distincts (data, management);
+\item
+  mettre en place une politique sécurisée de mots de passe
+  (utilisateurs, équipements);
+\item
+  savoir monitorer les éléments actifs et observer le trafic sur réseau;
+\item
+  savoir diagnostiquer les dysfonctionnements.
+\end{itemize}
 }
 
-\ajoutESformes{}
+\ajoutESformes{TP, projet}
 
 
 
 \ajoutESmodalite{L'étudiant doit être capable de retranscrire l'architecture réseau grâce
 à un outil de schéma réseau et de le détailler avec l'ensemble des
-paramètres du cahier des charges et des configurations.\\
+paramètres du cahiers des charges et des configurations.\\
 Pour l'évaluation, les étudiants doivent être capables de faire une
 démonstration technique progressive par tests unitaires, ou un rapport
 de synthèse ou une présentation avec diaporama.\\
