--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -67,7 +67,9 @@ pour gérer de façon efficace le traitement de ces données.}
 \item
   et/ou Soutenance orale présentant le travail réalisé
 \end{itemize}
+L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
+synthétise sa production technique et son analyse argumentée.
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique, Programmation, Script.}
+\ajoutSmotscles{Algorithmique, programmation, script.}
