--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -4,13 +4,14 @@
 
 \nouvelexemple{Qualité de réception de signaux de type radio}
 
-\ajoutESproblematique{Dans un contexte professionnel, comme chez un particulier, les signaux
+\ajoutESproblematique{}
+
+\ajoutESdescription{
+Dans un contexte professionnel, comme chez un particulier, les signaux
 radios reçus peuvent être de qualité très variable.\\
 Cette qualité dépend par exemple de la puissance reçue, de la fréquence
 ou de la bande de fréquence à recevoir, des conditions d'environnement,
-de la localisation du récepteur, ou encore de la présence de parasites.}
-
-\ajoutESdescription{
+de la localisation du récepteur, ou encore de la présence de parasites.\\
 L'étudiant devra appréhender quels sont les paramètres pertinents pour
 un système de transmission donné, déterminer quels types de mesures il
 devra effectuer, quels sont les appareils adéquats, quels devront être
@@ -18,36 +19,24 @@ leurs réglages.\\
 Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographie de
 réception.\\
-Les exemples de signaux à étudier pourront être de type :
+Les exemples de signaux à étudier pourront être :
 \begin{itemize}
 \item
-  signal WiFi;
+  de type signal WiFi;
 \item
-  téléphonie portable;
+  de type téléphonie portable;
 \item
-  réception \textabbrv{TV} : \textabbrv{DVB-S} ou \textabbrv{DVB-T};
+  de type réception \textabbrv{TV} : \textabbrv{DVB-S} ou \textabbrv{DVB-T};
 \item
-  réception \textabbrv{FM} ou \textabbrv{DAB}.
+  de type réception \textabbrv{FM} ou \textabbrv{DAB}.
 \end{itemize}
 }
 
-\ajoutESformes{\vspace{-5pt}
-\begin{itemize}
-\item
-  Travaux pratiques (notamment pour les mesures);
-\item
-  Projet (notamment pour la recherche sur le système de
-  transmission retenu, pour le choix des mesures à faire et du
-  paramétrage des appareils,
-  et pour l'analyse des mesures)
-\end{itemize}}
+\ajoutESformes{Travaux pratiques (notamment pour les mesures), projet (notamment pour
+la recherche sur le système de transmission retenu , pour le choix des
+mesures à faire et du paramétrage des appareils, et pour l'analyse des
+mesures)}
 
 
 
-\ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
-\item
-  Rapport écrit;
-\item
-  Présentation orale des performances mesurées et de leur analyse.
-\end{itemize}}
+\ajoutESmodalite{}
