--- a/latex/saes/SAE24.tex
+++ b/latex/saes/SAE24.tex
@@ -82,4 +82,4 @@ Et / ou grille de suivi
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseaux locaux, \textabbrv{LAN}, Programmation, Cybersécurité.}
+\ajoutSmotscles{Réseaux  locaux, \textabbrv{LAN}, programmation, cybersécurité.}
