--- a/latex/saes/SAE24_exemple2.tex
+++ b/latex/saes/SAE24_exemple2.tex
@@ -10,12 +10,12 @@ commande : refaire une partie du système et réseau.\\
 Sa mission consiste à :
 \begin{itemize}
 \item
-  Déployer le réseau d'une petite entreprise;
+  Déployer le réseau d'une petite entreprise
 \item
   Donner l'accès au système d'information de l'entreprise aux nouveaux
-  utilisateurs;
+  utilisateurs
 \item
-  Partager les documents de l'entreprise sur le réseau local;
+  Partager les documents de l'entreprise sur le réseau local
 \item
   Former les employés de l'entreprise à l'utilisation du système et à
   l'hygiène informatique.
@@ -38,16 +38,16 @@ pédagogiques suivantes :
 \begin{itemize}
 \item
   Création d'un réseau et l'administration du système de manière
-  physique et/ou virtuelle;
+  physique et/ou virtuelle.
 \item
   Entretiens oraux en anglais avec les utilisateurs de la maison mère
   pour résoudre un problème simple
-  d'utilisation;
+  d'utilisation.
 \item
   Rédaction de fiches opératoires (notice d'utilisation) en français et
-  en anglais;
+  en anglais.
 \item
-  Audit d'évaluation par les pairs en aveugle;
+  Audit d'évaluation par les pairs en aveugle
 \item
   Organisation de réunions en français et en anglais (présentations et
   formation, dont les bonnes pratiques
@@ -56,15 +56,8 @@ pédagogiques suivantes :
 
 
 
-\ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
-\item
-  Réseau entreprise : opérationnel (un utilisateur lambda peut-il se
-  connecter et accéder aux applications
-  et documents de l'entreprise ?).
-\item
-  Notices : les procédures sont-elles applicables par une autre équipe ?
-\item
-  Réunions : présentation finale (soutenance) du système mis en place,
-  en français et/ou en anglais.
-\end{itemize}}
+\ajoutESmodalite{Réseau entreprise : opérationnel (un utilisateur lambda peut-il se
+connecter et accéder aux applications et documents de l'entreprise ?).\\
+Notices : les procédures sont-elles applicables par une autre équipe.\\
+Réunions : présentation finale (soutenance) du système mis en place, en
+français et/ou en anglais.}
