--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -7,23 +7,22 @@
 \ajoutESproblematique{Il est essentiel dans une entreprise, quelle qu'en soit la taille, de
 sensibiliser le personnel avec des exemples simples (et si possible
 spectaculaires), aux conséquences d'une mauvaise hygiène informatique.\\
-Il est du rôle du responsable du système d'information de savoir
-enseigner les bonnes pratiques de la façon la plus simple et la plus
-convaincante possible.}
+Il est du rôle du responsable du SI de savoir enseigner les bonnes
+pratiques de la façon la plus simple et la plus convaincante possible.}
 
 \ajoutESdescription{
-Dans la continuité de la SAÉ ``Sensibilisation à l'hygiène informatique
+Dans la continuité de la SAÉ ``sensibilisation à l'hygiène informatique
 et à la cybersécurité'', l'objectif est d'aborder la cybersécurité sous
 un angle plus technique.\\
 Les étudiants seront amenés à reproduire des vulnérabilités et des
-attaques dans un environnement d'étude spécifiquement mis en place : un
+attaques dans un environnement d'étude spécifiquement mis en place: un
 réseau autonome réel ou simulé qui comportera quelques éléments actifs,
 serveurs et clients opérationnels.\\
 Cette étude permettra de se familiariser avec l'utilisation des
 principaux outils utilisés tout autant par les hackers que par les
-administrateurs des systèmes (\texttt{nmap}, john the ripper, burp
-suite, \texttt{scapy}, metasploit, \ldots) afin d'exploiter les
-vulnérabilités volontairement introduites dans la configuration.\\
+administrateurs des systèmes (nmap, john the ripper, burp suite, scapy,
+metasploit, \ldots) afin d'exploiter les vulnérabilités volontairement
+introduites dans la configuration.\\
 La maquette devra illustrer les techniques d'exploitations d'un nombre
 de vulnérabilités convenu en début d'étude, qui seront choisies dans le
 ``catalogue d'attaques'' produit dans la SAÉ précédente.\\
@@ -33,35 +32,26 @@ confidentialité des biens impactés, afin d'insister sur l'importance de
 l'hygiène informatique en contexte professionnel.
 }
 
-\ajoutESformes{\vspace{-5pt}
+\ajoutESformes{Sur des heures encadrées :
 \begin{itemize}
 \item
-  Sur des heures encadrées : TP de R201, R202, R203, R204, R207, R208,
-  R209.
+  TP de R201, R202, R203, R204, R207, R208, R209
+\end{itemize}
+Sur des heures non encadrées :
+\begin{itemize}
 \item
-  Sur des heures non encadrées :
-  \begin{itemize}
-  \item
-    Recherche documentaire;
-  \item
-    Mise en place de maquette, configuration et test;
-  \item
-    Rédaction de livrables, préparation de présentations.
-  \end{itemize}
+  Recherche documentaire
+\item
+  Mise en place de maquette, configuration et test
+\item
+  Rédaction de livrables, préparation de présentations
 \end{itemize}}
 
 
 
-\ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
-\item
-  Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
-  intégrant des vulnérabilités et des
-  outils permettant de les exploiter.
-\item
-  Une présentation de cette maquette, des vulnérabilités et des attaques
-  sera faite dans le cadre d'un
-  rapport et/ou d'une soutenance et/ou d'une démonstration. L'anglais
-  pourra être demandé pour tout ou
-  partie des livrables ou présentations.
-\end{itemize}}
+\ajoutESmodalite{Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
+intégrant des vulnérabilités et des outils permettant de les exploiter.\\
+Une présentation de cette maquette, des vulnérabilités et des attaques
+sera faite dans le cadre d'un rapport et/ou d'une soutenance et/ou d'une
+démonstration. L'anglais pourra être demandé pour tout ou partie des
+livrables ou présentations.}
